change for test 2

--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
 <div>a body content</div>
 <div>another body content</div>
 <div>a change</div>
+<p>a text for test 2</p>
+<div>a div for test 2</div>
+<button>test2</button>
 </body>
 </html>
