commit for merging

--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
 <div>a body content</div>
 <div>another body content</div>
 <div>a change</div>
+<div>a change from feature1</div>
+<div>another text from feature1</div>
+<button>feature1</button>
 </body>
 </html>
